# sadaka_app

./: .dockerignore  .env  .pre-commit-config.yaml  COMANDS.md  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
admin/: register.py  views.py
admin/views/: all.py  auth.py  base.py  country.py  fund.py  payment.py  project.py  region.py  schemas.py  stage.py  user.py
admin/views/base_classes/: image_as_field_upload.py
admin_sql/core/: register.py
admin_sql/core/views/: all.py  base.py  user.py
app/: celery_app.py  config.py  count_lines.py  exceptions.py  main.py  profiler.py  pytest.ini  settings.py  user_phone.py
app/admin/: auth.py  register.py
app/admin/templates/: login.html
app/admin/views/: all.py  auth.py  auth_permissions.py  authentication.py  base.py  city.py  comment.py  country.py  file.py  fund.py  one_time_pass.py  payment.py  project.py  referral.py  region.py  schemas.py  stage.py  user.py
app/auth/: __init__.py  dao.py  models.py  router.py  schemas.py  schemas_auth.py  service.py  service_auth.py  utils.py
app/auth/google/: router.py  schemas.py  service.py
app/auth/v1/: router.py  service_auth.py
app/auth_google/: router.py  schemas.py  service.py
app/auth_google/v1/: router.py  schemas.py  service.py
app/client/: google.py  google_client.py  interfaces.py  s3.py  s3_client.py
app/client/v1/: google_client.py  s3_client.py
app/dao/: base.py  database.py
app/dao/v1/: base.py
app/dependencies/: auth_dep.py  s3.py
app/dependencies/v1/: auth_dep.py  dao_dep.py  s3.py
app/documents/: enums.py  models.py  schemas.py
app/file/: enums.py  interfaces.py  models.py  schemas.py
app/file/use_cases/: create_file.py  create_picture.py  delete_file.py  interfaces.py  upload_user_avatar.py
app/file/v1/: interfaces.py  models.py  schemas.py
app/fund/: __init__.py  models.py
app/fund/v1/: models.py
app/geo/: __init__.py  models.py
app/geo/v1/: models.py  validators.py
app/geo/validators/: city.py
app/media_s3/: router.py
app/migration/: env.py
app/models/: city.py  comment.py  country.py  file.py  fund.py  geo.py  one_time_pass.py  payment.py  payments.py  project.py  recurring_payment.py  referral.py  region.py  stage.py  user.py
app/payments/: models.py
app/project/: enums.py  interfaces.py  models.py  router.py  schemas.py
app/s3_storage/: interfaces.py  router.py  schemas.py
app/tasks/: sms.py
app/tests/: conftest.py  mock_city.json  mock_country.json  mock_region.json  mock_role.json  mock_user.json  schemas.py  test_cases
app/users/: dao.py  enums.py  models.py  router.py  schemas.py
app/utils/: validators.py
data/: db.sqlite3  db_test.sqlite3  default_db.sqlite3
load_tests/: locustfile.py
tests/: conftest.py
tests/auth/: test_router.py
(+292 files in other folders)
