[project]
name = "sadaka-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mimesis>=18.0.0",
    "polyfactory>=2.19.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "sentry-sdk>=2.22.0",
]
