[project]
name = "sadaka-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.21.1",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "bcrypt>=4.3.0",
    "botocore>=1.37.1",
    "fastapi>=0.115.11",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "mimesis>=18.0.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic[email]>=2.10.6",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sentry-sdk>=2.22.0",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "polyfactory>=2.19.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]
